eventos.js y addEventListener

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Taller Eventos</title>
 </head>
 <body>
-    <button onclick="alert('Hola!')">Saludar</button>
+    <div class="container-button" style="padding:5px; background-color: green;" id="container">
+        <button onclick="alert('Hola!')">Saludar</button>
+    </div>
+
+    <script src="eventos.js"></script>
 </body>
 </html>
