--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Taller Eventos</title>
 </head>
 <body>
-    <div class="container-button" style="padding:5px; background-color: green;" id="container">
-        <button onclick="alert('Hola!')">Saludar</button>
-    </div>
+    <div class="container-button" style="padding:5px; background-color: green;" id="container"></div>
+    <button id="button" style="margin: 10px 0;">Saludar</button>
 
     <script src="eventos.js"></script>
 </body>
